= Pendiente
 * Agregar los mensajes que faltan

= v00007f =
@ 26/04/2018 - AGALAZ
 * Se cambió tMovim cod_endoso,codendoso -> endoso,cod_endoso

= v00007e =
@ 22/03/2018 - AGALAZ
 * No sincro se llama a Control Fecha con Periodo=0
@ 19/03/2018 - AGALAZ
 * Se cambia condición WHERE envío de Certificados 

= v00007d =
@ 08/03/2018 - AGALAZ
 * Se agrega cFecFinLarga
 * Se agrega template prorroga_noSync

= v00007c =
@ 07/03/2018 - AGALAZ
 * Cambios en la forma de cálculo del impuesto que ajusta
 * Se modifica en el Template SVG los días uso, no uso, punta.

= v00007b =
@ 06/03/2018 - AGALAZ
 * Cambios en la forma de cálculo

= v00007a =
@ 02/03/2018 - AGALAZ
 * Se agregan procesos que corren en forma continua:
   - Bienvenida
   - Prorroga
   - Certificado

= v00006b =
@ 22/02/2018 - AGALAZ
 * No se factura Pólizas TEST
@ 19/02/2018 - AGALAZ
 * Se agrega 'Días sin Mendición' al frente del mail de Administración
   Factura.

= v00006a =
@ 09/02/2018 - AGALAZ
 * En factura Parcial faltaba filtrar que los vehículos fueran Activos.
@ 08/02/2018 - AGALAZ
 * Se agrega nDiasCierreAnt a tabla wMemoryCierreTransf, para el procedure
   prControlCierreTransferenciaInicioDef, con esto se mide la cantidad de
   días al cierre inicial
 * Se ajusta la cantidad de días vencidos del periodo a 13 en FacturaParcial

= v00006 =
@ 02/02/2018 - AGALAZ
 * Se agrega BCC dos cuentas

= v00005c =
@ 01/02/2018 - AGALAZ
 * Se corrige a Periodo 0 clase AFacturar

= v00005b =
@ 31/01/2018 - AGALAZ
 * Se deja de utilizar la tabla tInicioTransferencia, porque distorsiona
   la fecha real del último viaje o control file.

= v00005a =
@ 29/01/2017
 * FacturacionAdmin se vuelve a v004e
 
= v00005 =
@ 17/01/2017
 * Se adelanta la fecha cierre inicio y fin en 7 días

= v00004e =
@ 04/01/2017
 * Se deja de mostrar Facturación 'Sin Multa' en CSV

= v00004d =
@ 29/12/2017
 * Se cambia a -3 días 'Administración facturas'

= v00004c =
@ 26/12/2017