@@ -99,7 +99,13 @@ public class EndosoFactura {
                     + "     , f.nQAceleracion                                , f.nQVelocidad \n"
                     + "     , f.nQCurva                                      , f.nDiasPunta \n"
                     + "     , f.nDiasUso - f.nDiasPunta  as nDiasNoPunta     , f.nDiasSinMedicion \n"
-                    + "     , datediff(f.dFin, f.dInicio) - f.nDiasUso - f.nDiasSinMedicion               as nDiasSinUso \n"
+                    // AGALAZ: Da un error de UNSIGNED cuando nDiasSinMedicion es mayor a la cantidad de días
+                    // + "     , datediff(f.dFin, f.dInicio) - f.nDiasUso - f.nDiasSinMedicion               as nDiasSinUso \n"
+                    + "     , CASE WHEN (datediff(f.dFin, f.dInicio) - f.nDiasUso ) > f.nDiasSinMedicion \n"
+                    + "          THEN datediff(f.dFin, f.dInicio) - f.nDiasUso - f.nDiasSinMedicion \n"
+                    + "       ELSE \n"
+                    + "          0 \n"
+                    + "       END                        as nDiasSinUso \n"                     
                     + " FROM  integrity.tMovim m \n"
                     + "       INNER JOIN tVehiculo v ON v.cPatente = m.nro_patente AND v.bVigente = '1' \n"
                     + "       INNER JOIN tUsuario  u ON u.pUsuario = v.fUsuarioTitular \n"
